--- a/destinations.html
+++ b/destinations.html
@@ -1,30 +1,29 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Unique — Destinations</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
-</head>
-<body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="logo" href="/unique/">Unique</a>
-      <nav class="nav" aria-label="Main">
-        <ul class="menu">
-          <li><a href="destinations.html" class="active">Destinations</a></li>
-          <li><a href="listing.html">Getaways</a></li>
-          <li><a class="cart-link" href="checkout.html">🛒 Cart <span id="cart-count">0</span></a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+<html lang="es"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Unique · Destinos</title>
+<link rel="icon" href="assets/img/icon.png"><link rel="stylesheet" href="assets/css/styles.css">
+</head><body>
+<header class="site-header"><div class="container header-inner"><a class="logo" href="index.html">Unique</a></div></header>
 
-  <main class="container section" id="destinations-page">
-    <h1>Destinations</h1>
-    <div id="destinations-grid" class="grid cards"></div>
-  </main>
+<section class="pad-top">
+  <div class="container"><h1 class="section-title">Todos los destinos</h1></div>
+  <div class="grid6">
+    <!-- Añade o duplica tiles según necesites -->
+    <a class="tile" style="--img:url('https://images.unsplash.com/photo-1526392060635-9d6019884377?q=80&w=1600&auto=format&fit=crop')"><span>Mallorca</span></a>
+    <a class="tile" style="--img:url('https://images.unsplash.com/photo-1529694157871-338dd8f5f8b3?q=80&w=1600&auto=format&fit=crop')"><span>Menorca</span></a>
+    <a class="tile" style="--img:url('https://images.unsplash.com/photo-1545134969-8debd725b007?q=80&w=1600&auto=format&fit=crop')"><span>Ibiza</span></a>
+    <a class="tile" style="--img:url('https://images.unsplash.com/photo-1594041680534-3f5573b36ad6?q=80&w=1600&auto=format&fit=crop')"><span>Formentera</span></a>
+    <a class="tile" style="--img:url('https://images.unsplash.com/photo-1533681018184-68bd1d883546?q=80&w=1600&auto=format&fit=crop')"><span>Gran Canaria</span></a>
+    <a class="tile" style="--img:url('https://images.unsplash.com/photo-1528127269322-539801943592?q=80&w=1600&auto=format&fit=crop')"><span>Costa Brava</span></a>
+    <a class="tile" style="--img:url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1600&auto=format&fit=crop')"><span>Barcelona</span></a>
+    <a class="tile" style="--img:url('https://images.unsplash.com/photo-1483729558449-99ef09a8c325?q=80&w=1600&auto=format&fit=crop')"><span>Sitges</span></a>
+    <a class="tile" style="--img:url('https://images.unsplash.com/photo-1558981403-c5f9899a28bc?q=80&w=1600&auto=format&fit=crop')"><span>Tenerife</span></a>
+    <a class="tile" style="--img:url('https://images.unsplash.com/photo-1525755662778-989d0524087e?q=80&w=1600&auto=format&fit=crop')"><span>Lanzarote</span></a>
+    <a class="tile" style="--img:url('https://images.unsplash.com/photo-1532369411147-7f2713d4b3c3?q=80&w=1600&auto=format&fit=crop')"><span>Andorra</span></a>
+    <a class="tile" style="--img:url('https://images.unsplash.com/photo-1467269204594-9661b134dd2b?q=80&w=1600&auto=format&fit=crop')"><span>Madrid</span></a>
+  </div>
+</section>
 
-  <script src="assets/js/main.js"></script>
-</body>
-</html>
+<footer class="site-footer"><div class="container footer-grid"><div><h4>UNIQUE</h4></div></div></footer>
+</body></html>
