--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Unique — Experiences</title>
 
-  <link rel="icon" type="image/png" href="assets/img/icon.png" />
-  <link rel="stylesheet" href="assets/css/styles.css" />
+<link rel="icon" type="image/png" href="./assets/img/icon.png" />
+<link rel="stylesheet" href="./assets/css/styles.css?v=1" />
+<script defer src="./assets/js/main.js?v=1"></script>
 
-  <script defer src="assets/js/main.js"></script>
 </head>
 <body>
 
