--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Unique — Experiences</title>
 
-<link rel="icon" type="image/png" href="./assets/img/icon.png" />
-<link rel="stylesheet" href="./assets/css/styles.css?v=1" />
-<script defer src="./assets/js/main.js?v=1"></script>
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="./assets/img/icon.png" />
 
+  <!-- CSS (versión con bust de caché) -->
+  <link rel="stylesheet" href="./assets/css/styles.css?v=1" />
+
+  <!-- JS (versión con bust de caché) -->
+  <script defer src="./assets/js/main.js?v=1"></script>
 </head>
+
 <body>
 
   <!-- Header -->
