--- a/personaliza.html
+++ b/personaliza.html
@@ -5,35 +5,40 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Personaliza tu viaje — Unique</title>
   <link rel="icon" type="image/png" href="./assets/img/icon.png" />
-  <link rel="stylesheet" href="./assets/css/styles.css?v=3" />
+  <link rel="stylesheet" href="./assets/css/styles.css?v=4" />
   <style>
     .layout{display:grid;grid-template-columns:20% 20% 60%;min-height:100svh}
     .pane{border-right:1px solid #ececf3;background:#fff}
     .pane h4{margin:16px}
     .pane .blk{padding:10px 16px;border-top:1px dashed #eee}
-    .pane button{width:100%;text-align:left;border:0;background:#fff;padding:10px;border-radius:10px;cursor:pointer}
-    .pane button:hover{background:#f6f7fb}
+    .pane button, .pane select{width:100%;text-align:left;border:1px solid #e8e8ef;background:#fff;padding:10px;border-radius:10px;cursor:pointer}
     .list{padding:12px;height:calc(100svh - 64px);overflow:auto}
     .list .item{border:1px solid #eee;border-radius:12px;padding:10px;margin:8px 0;cursor:pointer;background:#fff}
     .gallery{padding:16px;background:linear-gradient(180deg,#fff,var(--beige))}
-    .gallery .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:14px}
-    .gallery .card{background:#fff;border:1px solid #eee;border-radius:12px;overflow:hidden}
-    .gallery .card img{width:100%;height:160px;object-fit:cover}
-    .gallery .card .pad{padding:10px}
+    .gallery .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
+    .gallery .card{background:#fff;border:1px solid #eee;border-radius:16px;overflow:hidden}
+    .gallery .card img{width:100%;height:260px;object-fit:cover}
+    .gallery .card .pad{padding:12px}
     @media (max-width:900px){.layout{grid-template-columns:1fr}; .gallery .grid{grid-template-columns:1fr}}
+    /* calendario en A */
+    #pzCal{display:none;position:absolute;z-index:5;background:#fff;border:1px solid #e8e8ef;border-radius:16px;box-shadow:var(--ring);padding:14px;margin-top:6px}
+    #pzCal .wrap{display:flex;gap:16px}
+    #pzCal h4{margin:6px 0 10px}
+    #pzCal .grid.cal{display:grid;grid-template-columns:repeat(7,40px);gap:6px}
+    #pzCal .grid.cal span{height:40px}
+    #pzCal .day{height:40px;border:1px solid #eef0f6;border-radius:10px;background:#fff;cursor:pointer}
+    #pzCal .day.sel{background:var(--brand);color:#fff;border-color:var(--brand)}
+    #pzCal .day.rng{background:rgba(254,230,202,.7);border-color:rgba(254,230,202,.9)}
   </style>
+  <script defer src="./assets/js/main.js?v=4"></script>
   <script defer>
     document.addEventListener('DOMContentLoaded',()=>{
-      // calendario simple
-      const cal = document.querySelector('#p_date');
-      cal.valueAsDate = new Date();
-
+      /* Pane B dataset */
       const data = {
-        hoteles:['Boutique','Resort','Rural','Adults only','Wellness'],
+        hoteles:['Boutique','Resort','Rural','Adults only','Wellness','Urbano'],
         destinos:['Mallorca','Menorca','Ibiza','Formentera','Gran Canaria','Costa Brava'],
         actividades:['Navegación','Spa','Tablao','Paddle','Espeleología','Delfines','Globo']
       };
-
       const list = document.querySelector('#paneB .list');
       let mode = 'hoteles';
       function renderList(){
@@ -45,33 +50,81 @@
       function fillGallery(tag){
         const g = document.querySelector('#galGrid');
         const pics = [
-          'https://images.unsplash.com/photo-1551776235-dde6d4829808?q=80&w=1200&auto=format&fit=crop',
-          'https://images.unsplash.com/photo-1496412705862-e0088f16f791?q=80&w=1200&auto=format&fit=crop',
-          'https://images.unsplash.com/photo-1505692794403-34d4982f88aa?q=80&w=1200&auto=format&fit=crop',
-          'https://images.unsplash.com/photo-1496417263034-38ec4f0b665a?q=80&w=1200&auto=format&fit=crop',
-          'https://images.unsplash.com/photo-1562774053-701939374585?q=80&w=1200&auto=format&fit=crop',
-          'https://images.unsplash.com/photo-1543363136-43b7deed3b29?q=80&w=1200&auto=format&fit=crop',
-          'https://images.unsplash.com/photo-1596464716121-f7c9a2b805d6?q=80&w=1200&auto=format&fit=crop',
-          'https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1200&auto=format&fit=crop',
-          'https://images.unsplash.com/photo-1556228724-4c1e0c1a5141?q=80&w=1200&auto=format&fit=crop'
+          'https://images.unsplash.com/photo-1551776235-dde6d4829808?q=80&w=1600&auto=format&fit=crop',
+          'https://images.unsplash.com/photo-1496412705862-e0088f16f791?q=80&w=1600&auto=format&fit=crop',
+          'https://images.unsplash.com/photo-1505692794403-34d4982f88aa?q=80&w=1600&auto=format&fit=crop',
+          'https://images.unsplash.com/photo-1496417263034-38ec4f0b665a?q=80&w=1600&auto=format&fit=crop',
+          'https://images.unsplash.com/photo-1562774053-701939374585?q=80&w=1600&auto=format&fit=crop',
+          'https://images.unsplash.com/photo-1543363136-43b7deed3b29?q=80&w=1600&auto=format&fit=crop',
+          'https://images.unsplash.com/photo-1596464716121-f7c9a2b805d6?q=80&w=1600&auto=format&fit=crop',
+          'https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?q=80&w=1600&auto=format&fit=crop',
+          'https://images.unsplash.com/photo-1556228724-4c1e0c1a5141?q=80&w=1600&auto=format&fit=crop'
         ];
         g.innerHTML = pics.map((src,i)=>`
           <div class="card">
             <img src="${src}" alt="">
             <div class="pad">
               <h3>${tag} ${i+1}</h3>
-              <p>Lorem ipsum dolor sit amet.</p>
+              <p>Inspiración para tu viaje.</p>
             </div>
           </div>`).join('');
       }
 
-      // acciones en A
+      // Acciones A
       document.querySelector('#btn_hoteles').onclick = ()=>{ mode='hoteles'; renderList(); };
       document.querySelector('#btn_destinos').onclick = ()=>{ mode='destinos'; renderList(); };
       document.querySelector('#btn_acts').onclick    = ()=>{ mode='actividades'; renderList(); };
+      renderList(); fillGallery('Recomendado');
 
-      renderList();
-      fillGallery('Recomendado');
+      /* Calendario tipo civitatis para Personaliza */
+      const pzInput = document.getElementById('pzDateRange');
+      const pzCal   = document.getElementById('pzCal');
+      let start=null,end=null;
+
+      function renderMonth(base){
+        const d = new Date(base.getFullYear(), base.getMonth(),1);
+        const m = d.getMonth();
+        let html = `<div class="mcol"><h4>${d.toLocaleString('es-ES',{month:'long',year:'numeric'})}</h4><div class="grid cal">`;
+        const pad = (d.getDay()+6)%7;
+        for(let i=0;i<pad;i++) html += `<span></span>`;
+        while(d.getMonth()===m){
+          const ds = new Date(d);
+          const iso = ds.toISOString().slice(0,10);
+          html += `<button class="day" data-d="${iso}">${d.getDate()}</button>`;
+          d.setDate(d.getDate()+1);
+        }
+        html += `</div></div>`;
+        return html;
+      }
+      function openPz(){
+        if(pzCal.dataset.ready!=='1'){
+          const now = new Date();
+          const next = new Date(now.getFullYear(),now.getMonth()+1,1);
+          pzCal.innerHTML = `<div class="wrap">${renderMonth(now)}${renderMonth(next)}</div>`;
+          pzCal.dataset.ready='1';
+          pzCal.querySelectorAll('.day').forEach(b=>{
+            b.addEventListener('click',()=>{
+              const dt = new Date(b.dataset.d);
+              if(!start || (start && end)){ start=dt; end=null; }
+              else if(dt>=start){ end=dt; }
+              else { start=dt; end=null; }
+              pzCal.querySelectorAll('.day').forEach(x=>{
+                const dd = new Date(x.dataset.d);
+                x.classList.toggle('sel', +dd===+start || +dd===+end);
+                const inrange = start && end && dd>start && dd<end;
+                x.classList.toggle('rng', inrange);
+              });
+              if(start && end){
+                pzInput.value = `${('0'+start.getDate()).slice(-2)}/${('0'+(start.getMonth()+1)).slice(-2)}/${start.getFullYear()} - ${('0'+end.getDate()).slice(-2)}/${('0'+(end.getMonth()+1)).slice(-2)}/${end.getFullYear()}`;
+                pzCal.style.display='none';
+              }
+            });
+          });
+        }
+        pzCal.style.display='block';
+      }
+      pzInput.addEventListener('click',openPz);
+      document.getElementById('blkDate').addEventListener('mouseleave',()=>pzCal.style.display='none');
     });
   </script>
 </head>
@@ -93,25 +146,27 @@
     <aside class="pane" id="paneA">
       <h4>Personaliza tu viaje</h4>
 
-      <div class="blk">
+      <div class="blk" id="blkDate" style="position:relative">
         <label>Fechas</label>
-        <input id="p_date" type="date" style="width:100%;height:40px;border:1px solid #e8e8ef;border-radius:10px;padding:0 10px" />
+        <input id="pzDateRange" type="text" placeholder="Selecciona fechas" readonly style="width:100%;height:44px;border:1px solid #e8e8ef;border-radius:10px;padding:0 10px" />
+        <div id="pzCal"></div>
       </div>
 
       <div class="blk">
         <label>Origen</label>
-        <input type="text" placeholder="Ciudad o aeropuerto" style="width:100%;height:40px;border:1px solid #e8e8ef;border-radius:10px;padding:0 10px" />
+        <select id="pzOrigin">
+          <option value="LHR">Londres-Heathrow (LHR)</option>
+          <option value="LGW">Londres-Gatwick (LGW)</option>
+          <option value="LCY">London City Airport (LCY)</option>
+          <option value="MAN">Manchester (MAN)</option>
+          <option value="BHX">Birmingham (BHX)</option>
+          <option value="LPL">Liverpool (LPL)</option>
+        </select>
       </div>
 
-      <div class="blk">
-        <button id="btn_hoteles">Hoteles</button>
-      </div>
-      <div class="blk">
-        <button id="btn_destinos">Destino</button>
-      </div>
-      <div class="blk">
-        <button id="btn_acts">Actividades</button>
-      </div>
+      <div class="blk"><button id="btn_hoteles">Hoteles</button></div>
+      <div class="blk"><button id="btn_destinos">Destino</button></div>
+      <div class="blk"><button id="btn_acts">Actividades</button></div>
     </aside>
 
     <!-- Pane B -->
